modal add modal structure

--- a/packages/adsum-modal-asia/src/Modal.css
+++ b/packages/adsum-modal-asia/src/Modal.css
@@ -1,40 +1,25 @@
-.modalContainer{
+.modalContainer {
     position: absolute;
-    top: 0;
-    left: 0;
     display: grid;
     grid-template-areas: 
     'controller'
-    'children';
+    'content';
 }
-.modalContainer .modalController{
+.modalContainer .modalController {
+    grid-area: controller;
     top: 0;
     left: 0;
-    grid-area: controller;
-    border: 2px solid green;
 }
 .modalContainer .modalController .backButton{
     position: absolute;
     top: 0;
     left: 0;
 }
-
-.modalContainer .modalController .backButton img{
-    height: 90%;
-    width: 90%;
-}
-
 .modalContainer .modalController .closeButton{
     position: absolute;
     top: 0;
     right: 0;
 }
-
-.modalContainer .modalController .closeButton img{
-    height: 90%;
-    width: 90%;
-}
-
-.modalContainer .modalChildren{
-    grid-area: children;
+.modalContainer .content {
+    grid-area: content;
 }
