add z index and classname

--- a/packages/adsum-modal-asia/src/Modal.css
+++ b/packages/adsum-modal-asia/src/Modal.css
@@ -4,6 +4,7 @@
     grid-template-areas: 
     'controller'
     'content';
+    z-index: 888;
 }
 .modalContainer .modalController {
     grid-area: controller;
