--- a/packages/adsum-modal-asia/src/Modal.less
+++ b/packages/adsum-modal-asia/src/Modal.less
@@ -4,10 +4,10 @@
     grid-template-areas: 
     'controller'
     'content';
+    z-index: 888;
 
     .modalController {
         grid-area: controller;
-        position: absolute;
         top: 0;
         left: 0;
 
@@ -27,4 +27,9 @@
     .content {
         grid-area: content;
     }
+}
+
+.modalOverlay {
+    position: absolute;
+    z-index: 887;
 }
