remove modal controller and modalgrid

--- a/packages/adsum-modal-asia/src/Modal.css
+++ b/packages/adsum-modal-asia/src/Modal.css
@@ -1,28 +1,19 @@
 .modalContainer {
     position: absolute;
-    display: grid;
-    grid-template-areas: 
-    'controller'
-    'content';
     z-index: 888;
 }
-.modalContainer .modalController {
-    grid-area: controller;
-    top: 0;
-    left: 0;
-}
-.modalContainer .modalController .backButton{
+.modalContainer .backButton{
     position: absolute;
     top: 0;
     left: 0;
 }
-.modalContainer .modalController .closeButton{
+.modalContainer .closeButton{
     position: absolute;
     top: 0;
     right: 0;
 }
 .modalContainer .content {
-    grid-area: content;
+    height: 100%;
 }
 .modalOverlay {
     position: absolute;
