edit modal and add GNI

--- a/packages/adsum-modal-asia/src/Modal.css
+++ b/packages/adsum-modal-asia/src/Modal.css
@@ -1,19 +1,28 @@
 .modalContainer {
     position: absolute;
+    display: grid;
+    grid-template-areas: 
+    'controller'
+    'content';
     z-index: 888;
 }
-.modalContainer .backButton{
+.modalContainer .modalController {
+    grid-area: controller;
+    top: 0;
+    left: 0;
+}
+.modalContainer .modalController .backButton{
     position: absolute;
     top: 0;
     left: 0;
 }
-.modalContainer .closeButton{
+.modalContainer .modalController .closeButton{
     position: absolute;
     top: 0;
     right: 0;
 }
 .modalContainer .content {
-    height: 100%;
+    grid-area: content;
 }
 .modalOverlay {
     position: absolute;
