--- a/packages/adsum-steplist/src/StepList.css
+++ b/packages/adsum-steplist/src/StepList.css
@@ -3,3 +3,22 @@
   justify-content: center;
   border: solid 2px black;
 }
+
+.steplist .step {
+  height          : 55%;
+  padding-left    : 5px !important;
+  padding-right   : 5px !important;
+  font-size       : 26px!important;
+  color           : white;
+  text-align      : center;
+  justify-content : flex-start !important;
+  padding         : 0.5em !important;
+}
+
+.step .badge {
+  color             : black;
+  background-color  : white;
+}
+.step .message {
+  margin-top: 0.5em !important;
+}
