--- a/packages/adsum-steplist/src/StepList.less
+++ b/packages/adsum-steplist/src/StepList.less
@@ -2,4 +2,23 @@
   display: flex;
   justify-content: center;
   border: solid 2px black;
+
+  .step {
+    height          : 55%;
+    padding-left    : 5px !important;
+    padding-right   : 5px !important;
+    font-size       : 26px!important;
+    color           : white;
+    text-align      : center;
+    justify-content : flex-start !important;
+    padding         : 0.5em !important;
+
+    .badge {
+        color             : black;
+        background-color  : white;
+    }
+    .message {
+      margin-top: 0.5em !important;
+    }
+  }
 }
